--- a/assets/css/edit.css
+++ b/assets/css/edit.css
@@ -10,10 +10,10 @@ h1 {
 
 .select select:focus,
 .input:focus {
-    border-color: #fff;
-    box-shadow: 5px 5px 15px rgba(186, 126, 126, 0.5);
+    border-color: var(--color-light);
+    box-shadow: 5px 5px 15px var(--box-shadow-color);
 }
 
 .select:not(.is-multiple):not(.is-loading)::after {
-    border-color: #4a091d;
+    border-color: var(--color-secondary);
 }
