--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,10 +15,41 @@
     --color-quaternary: #e2d9be;
     --color-dark: #333;
     --color-light: #fff;
+    --box-shadow-color:rgba(186, 126, 126, 0.5);
     --font-family-sans-serif: 'Josefin Sans';
     --font-family-serif: 'Crimson Text';
     --border-radius: 5px;
     --transition: 0.3s ease;
+}
+
+.default {
+    --color-primary: #cbacae;
+    --color-secondary: #4a091d;
+    --color-tertiary: #a4383c;
+    --color-quaternary: #e2d9be;
+    --color-dark: #333;
+    --color-light: #fff;
+    --box-shadow-color:rgba(186, 126, 126, 0.5);
+}
+
+.dark {
+    --color-primary: #1a0103;
+    --color-secondary:#4a091d;
+    --color-tertiary: #a4383c;
+    --color-quaternary: #fcf8ec;
+    --color-dark: #111;
+    --color-light: #eecfba;
+    --box-shadow-color:rgba(0, 0, 0, 0.5);
+}
+
+.bright {
+    --color-primary: #c97479;
+    --color-secondary: #9c153e;
+    --color-tertiary: #e75257;
+    --color-quaternary: #f3d16b;
+    --color-dark: #333;
+    --color-light: #fff;
+    --box-shadow-color:rgba(231, 101, 101, 0.5);
 }
 
 * {
@@ -36,7 +67,7 @@ html {
 
 body {
     background-color: var(--color-primary);
-    color: white;
+    color: var(--color-light);
     font-family: var(--font-family-serif);
     font-weight: 400;
     font-size: 1.25rem;
@@ -112,7 +143,7 @@ p {
 }
 
 .button:hover {
-    background-color: #111;
+    background-color: var(--color-secondary);
     cursor: pointer;
     transition: var(--transition);
 }
@@ -133,7 +164,7 @@ p {
     position: relative;
     font-family: var(--font-family-sans-serif);
     font-size: 0.75rem;
-    box-shadow: 5px 5px 15px rgba(186, 126, 126, 0.5);
+    box-shadow: 5px 5px 15px var(--box-shadow-color);
 }
 
 .item-details {
